# FastAPI_project

./: config.py  database.py  db_models.py  main.py  obj_schemas.py  pyproject.toml
api/: __init__.py  files.py  forms.py  items.py  users.py  users_items.py
core/: config.py
crud/: __init__.py  file.py  item.py  user.py  user_item.py
database/: __init__.py  session.py
models/: __init__.py  db_models.py  file.py  user.py
schemas/: __init__.py  file.py  obj_schemas.py  user.py
templates/: upload_form.html
